# Amplify

./: .gitattributes  .gitignore  .prettierrc.json  .stylelintrc.json  README.md  options.conf  package-lock.json  pyproject.toml  start.ps1  start.sh
.github/workflows/: django.yml  eslint.yml  node.js.yml  pylint.yml  super-linter.yml
AMPLIFY - 2/: README.md  global.css  index.css  index.html  package.json
amplify/: README.md  index.html  package-lock.json  package.json  vite.config.mjs
amplify-icp/: README.md  dfx.json  package-lock.json  package.json
amplify-icp/.azle/amplify-icp-backend/: amplify-icp-backend.wasm  canister.wasm
amplify-icp/src/amplify-icp-backend/: package.json
amplify-icp/src/amplify-icp-frontend/: global.css  header-scroll.js  index.css  index.html  index.old.html  package.json
amplify/public/: index.html
amplify/src/: App.vue
amplify/src/components/: AiProcess.vue  (+13 more)
amplify_backend/: __init__.py  __main__.py  api.py  app.py  app_factory.py  config.py  database.py  db_handler.py  db_manager.py  info.py  routes.py  user_manager.py
amplify_backend/models/: base.py  note.py  user.py
amplify_frontend/: index.html  package-lock.json  package.json  vite.config.mjs
amplify_frontend/src/: main.js
backend/: README.md  pyproject.toml
backend/amplify/: manage.py
backend/amplify/amplify/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: README.md  global.css  header-scroll.js  index.css  index.html  login.css
frontend.bak/: login.html
frontend/Amplify/: .eslintrc.js  README.md  index.html  package-lock.json  package.json
(+60 files in other folders)
