[tool.poetry]
name = "amplify_backend"
version = "0.1.0"
description = "AI-Powered Note-Taking for Students."
authors = ["chris1320 <chris1320is@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
Flask-Cors = "^4.0.1"

[tool.poetry.group.dev.dependencies]
pylint = "^3.2.3"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
