[tool.poetry]
name = "amplify"
version = "0.1.0"
description = "AI-Powered Note-Taking for Students."
authors = ["chris1320 <chris1320is@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.6"
djangorestframework = "^3.15.1"
django-cors-headers = "^4.3.1"
djoser = "^2.2.2"

[tool.poetry.group.dev.dependencies]
pylint = "^3.2.2"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
